--- a/price_sites.yaml
+++ b/price_sites.yaml
@@ -1,82 +1,56 @@
 sites:
-  - name: "Marshallberg Farm"
-    allow_domains: ["marshallbergfarm.com", "www.marshallbergfarm.com"]
+  - name: Marshallberg Farm
+    allow_domains: [ "marshallbergfarm.com" ]
     start_urls:
-      - "https://marshallbergfarm.com/caviar/"
-    selectors:
-      product_link: "a.woocommerce-LoopProduct-link, a.woocommerce-loop-product__link"
-    # No default here; Marshallberg pages usually name Osetra explicitly.
-    default_species: null
+      - https://marshallbergfarm.com/product-category/caviar/
     seed_product_urls:
-      - "https://marshallbergfarm.com/product/royal-osetra-caviar/"
-      - "https://marshallbergfarm.com/product/classic-osetra-caviar/"
-
-  - name: "Sterling"
-    allow_domains: ["sterlingcaviar.com", "www.sterlingcaviar.com"]
-    start_urls:
-      - "https://www.sterlingcaviar.com/collections/caviar"
+      - https://marshallbergfarm.com/product/classic-osetra-caviar/
+      - https://marshallbergfarm.com/product/royal-osetra-caviar/
+    default_species: Osetra
     selectors:
-      product_link: "a.full-unstyled-link, a.card__heading a"
-    # Sterling is consistently White Sturgeon (A. transmontanus)
-    default_species: "White Sturgeon"
+      product_link: ".products a.woocommerce-LoopProduct-link"
+
+  - name: Sterling
+    allow_domains: [ "sterlingcaviar.com", "www.sterlingcaviar.com" ]
+    start_urls:
+      - https://www.sterlingcaviar.com/collections/caviar
     seed_product_urls:
-      - "https://www.sterlingcaviar.com/products/imperial-white-sturgeon-30g"
-      - "https://www.sterlingcaviar.com/products/classic-white-sturgeon-50g"
+      - https://www.sterlingcaviar.com/products/classic-white-sturgeon-50g
+      - https://www.sterlingcaviar.com/products/imperial-white-sturgeon-30g
+    default_species: White Sturgeon
 
-  - name: "Tsar Nicoulai"
-    allow_domains: ["tsarnicoulai.com", "www.tsarnicoulai.com"]
+  - name: Tsar Nicoulai
+    allow_domains: [ "tsarnicoulai.com", "www.tsarnicoulai.com" ]
     start_urls:
-      - "https://tsarnicoulai.com/collections/caviar"
-    selectors:
-      product_link: "a.full-unstyled-link, a.card-information__text"
-    # TN is also White Sturgeon domestically
-    default_species: "White Sturgeon"
+      - https://tsarnicoulai.com/collections/caviar
     seed_product_urls:
-      - "https://tsarnicoulai.com/products/estate-caviar-30g"
-      - "https://tsarnicoulai.com/products/reserve-caviar-50g"
+      - https://tsarnicoulai.com/products/estate-caviar-30g
+      - https://tsarnicoulai.com/products/reserve-caviar-50g
+    # they sell Siberian/Osetra lines; we'll detect species from page text
 
-  - name: "Island Creek"
-    allow_domains: ["islandcreekoysters.com", "www.islandcreekoysters.com"]
+  - name: Pearl Street Caviar
+    allow_domains: [ "pearlstreetcaviar.com", "www.pearlstreetcaviar.com" ]
     start_urls:
-      - "https://www.islandcreekoysters.com/collections/caviar"
-    selectors:
-      product_link: "a.productitem--title, a.full-unstyled-link"
-    # They retail multiple species; don’t assume.
-    default_species: null
+      - https://pearlstreetcaviar.com/collections/caviar
+    seed_product_urls:
+      - https://pearlstreetcaviar.com/products/kaluga-hybrid-caviar-50g
+      - https://pearlstreetcaviar.com/products/siberian-caviar-30g
+    # canonicalization in code maps their "Beluga" branding to Kaluga Hybrid
+
+  - name: Island Creek
+    allow_domains: [ "shop.islandcreekoysters.com", "islandcreekoysters.com" ]
+    start_urls:
+      - https://shop.islandcreekoysters.com/collections/caviar
     seed_product_urls: []
 
-  - name: "Pearl Street Caviar"
-    allow_domains: ["pearlstreetcaviar.com", "www.pearlstreetcaviar.com"]
+  - name: Marky's
+    allow_domains: [ "markys.com", "www.markys.com" ]
     start_urls:
-      - "https://pearlstreetcaviar.com/collections/caviar"
-    selectors:
-      product_link: "a.full-unstyled-link, a.card-information__text"
-    # PSC sells Siberian & Kaluga Hybrid among others; don’t assume.
-    default_species: null
-    seed_product_urls:
-      - "https://pearlstreetcaviar.com/products/siberian-caviar-30g"
-      - "https://pearlstreetcaviar.com/products/kaluga-hybrid-caviar-50g"
+      - https://www.markys.com/caviar
+    seed_product_urls: []
 
-  - name: "Marky's"
-    allow_domains: ["markys.com", "www.markys.com"]
+  - name: Bemka / CaviarLover
+    allow_domains: [ "caviarlover.com", "www.caviarlover.com" ]
     start_urls:
-      - "https://www.markys.com/caviar"
-    selectors:
-      product_link: "a.product-item-link, a.product-item-photo"
-    # Marky’s carries many species; don’t assume.
-    default_species: null
-    seed_product_urls:
-      - "https://www.markys.com/product/kaluga-caviar-1oz"
-      - "https://www.markys.com/product/osetra-caviar-1oz"
-
-  - name: "Bemka / CaviarLover"
-    allow_domains: ["caviarlover.com", "www.caviarlover.com"]
-    start_urls:
-      - "https://www.caviarlover.com/caviar/"
-    selectors:
-      product_link: "a.woocommerce-LoopProduct-link, a.woocommerce-loop-product__link"
-    # They carry multiple species; don’t assume.
-    default_species: null
-    seed_product_urls:
-      - "https://www.caviarlover.com/product/classic-osetra-caviar/"
-      - "https://www.caviarlover.com/product/imperial-kaluga-caviar/"
+      - https://www.caviarlover.com/product-category/caviar/
+    seed_product_urls: []
